--- a/metro.html
+++ b/metro.html
@@ -14,7 +14,7 @@
 <div id="fuScr"></div>-->
 <h1>hhhhhhhhhhhhh</h1>
 <div id="content">somekindotxt
-<!--img src="images-geo/metromap-min.png"-->
+<!--img src="metromap-min.png"-->
 </div>
 
  <!-- Optional JavaScript --> 
